<resources>
    <string name="app_name">AC Controller</string>
    <string name="change_state">Change A/C State</string>
    <string name="state_display">Current State: </string>
    <string name="pending">Pending Update to:</string>
    <string name="curr_state">Loading</string>
    <string name="user_display">Last updated by: </string>
    <string name="curr_user">Loading User</string>

    <string-array name="ac_opts">
        <item>Low Vent</item>
        <item>High Vent</item>
        <item>Low Cool</item>
        <item>High Cool</item>
        <item>Pump</item>
        <item>Off</item>
        <item>Calibrate</item>
        <item>Weather</item>
    </string-array>

    <!-- login page strings -->
    <string name="user">Enter Username: </string>
    <string name="password">Enter Password: </string>
    <string name="submit">Submit</string>
</resources>